Create  - Signup Page: all ui Update  - Home style sheet: extension  - Login Page: Link => div (for router replacement)

--- a/front/styles/Sign.module.scss
+++ b/front/styles/Sign.module.scss
@@ -13,6 +13,8 @@
 .signin {
   color: #1D1D1D;
   margin-left: 4px;
+  cursor: pointer;
+  display: inline-block;
   &:hover{
     text-decoration: underline;
     text-underline-position: under;
